# transition_gap_public

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  app.py  instruction_01_setup.md  instruction_02.txt  instruction_03_diagnosis_complete.md  pyproject.toml  requirements.txt  spec_v0.1.md  start.bat  start_servers.ps1
.streamlit/: config.toml
backend/: .gitignore  README.md  pyproject.toml  requirements.txt  setup_backend.bat  start_backend.bat
backend/app/: main.py
backend/app/api/: access.py  content.py  deps.py  diagnose.py  events.py
backend/app/content/: hr_options.json  hr_tips.json  implications.json  scenarios.json  schema.json
backend/app/core/: access_control.py  alignment_engine.py  alignment_map.py  analysis_engine.py  diagnosis_mode.py  trade_off.py  variables.py  visibility_index.py
backend/app/db/: __init__.py  events.py
backend/app/schemas/: access.py  analysis.py  event.py  responses.py
backend/core_tests/: test_alignment_engine.py  test_alignment_map.py  test_ceo_copy_reframe.py  test_diagnosis_mode.py  test_dynamic_benchmarks.py  test_issue_display_titles.py  test_leadership_scoring.py  test_schema_wording.py  test_stage_guidance.py  test_stage_wording.py  test_to_be_coordinates.py  test_trade_off_quadrants.py
backend/tests/: conftest.py  test_access_endpoint.py  test_api_branding.py  test_content_endpoints.py  test_diagnose_endpoint.py  test_events_endpoint.py  test_implication_parity.py  test_stage_guidance_endpoint.py
docs/: decisions.md  deployment.md  product_design_sian_v0.1.md
frontend/: .gitignore  package-lock.json  (+4 more)
(+166 files in other folders)
