[project]
name = "transition-gap"
version = "0.1.0"
description = "AI 시대 한국 스타트업 인사제도 진단/설계 도구"
requires-python = ">=3.12,<3.13"
dependencies = [
    "streamlit>=1.32.0",
    "plotly>=5.18.0",
    "google-generativeai>=0.5.0",
    "reportlab>=4.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]
